# apps/sv/src/main/openapi/sv-internal.yaml
@@ -310,6 +310,24 @@ paths:
             application/json:
               schema:
                 "$ref": "../../../../common/src/main/openapi/common-internal.yaml#/components/schemas/ListDsoRulesVoteResultsResponse"
+  /v0/admin/sv/reward-weight-before:
+    post:
+      tags: [ sv ]
+      x-jvm-package: sv_operator
+      operationId: "lookupSvRewardWeightBefore"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "../../../../scan/src/main/openapi/scan.yaml#/components/schemas/LookupSvRewardWeightBeforeRequest"
+      responses:
+        "200":
+          description: ok
+          content:
+            application/json:
+              schema:
+                $ref: "../../../../scan/src/main/openapi/scan.yaml#/components/schemas/LookupSvRewardWeightBeforeResponse"
   /v0/admin/sv/voterequests/{vote_request_contract_id}:
     get:
       tags: [ sv ]
